force-app/main/default/objects/Job_Queue__c/Job_Queue__c.object-meta.xml
<CustomObject>
    <label>Job Queue</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Job Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Queues</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>