force-app/main/default/objects/Job_Queue__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>How long this Job Queue has been created</description>
    <formula>IF ( NOT(ISNULL(Queued_Time__c))
,TODAY() - DATEVALUE(Queued_Time__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>