force-app/main/default/objects/Job_Queue__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Which class originated this Job Queue</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>