force-app/main/default/objects/Job_Queue__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <description>Name of the Job Queue</description>
    <externalId>true</externalId>
    <label>Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>