force-app/main/default/objects/Job_Queue__c/fields/Manual_Run__c.field-meta.xml
<CustomField>
    <fullName>Manual_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Force this job to run immediately without waiting for the Schedule Time to be reached</description>
    <label>Manual Run</label>
    <type>Checkbox</type>
</CustomField>