force-app/main/default/objects/Job_Queue__c/fields/Parameter__c.field-meta.xml
<CustomField>
    <fullName>Parameter__c</fullName>
    <description>Parameter for the Apex Job or Batch to run</description>
    <label>Parameter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>