force-app/main/default/objects/Job_Queue__c/fields/Queued_Time__c.field-meta.xml
<CustomField>
    <fullName>Queued_Time__c</fullName>
    <description>The timestamp when this Job Queue entered Scheduled Job in Salesforce</description>
    <label>Queued Time</label>
    <type>DateTime</type>
</CustomField>