force-app/main/default/objects/Job_Queue__c/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <description>The Id that is used to reference the record that originated this Job Queue</description>
    <label>Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>