force-app/main/default/objects/Job_Queue__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>Result when the Job is scheduled into Scheuled Job in Salesforce</description>
    <label>Result</label>
    <type>TextArea</type>
</CustomField>