force-app/main/default/objects/Job_Queue__c/fields/Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Time__c</fullName>
    <description>The time that this Job Queue should run</description>
    <label>Schedule Time</label>
    <type>DateTime</type>
</CustomField>