force-app/main/default/objects/Job_Queue__c/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Job Queue has been scheduled</description>
    <label>Scheduled</label>
    <type>Checkbox</type>
</CustomField>