force-app/main/default/objects/Job_Queue__c/listViews/Specific_Flight_1.listView-meta.xml
<ListView>
    <fullName>Specific_Flight_1</fullName>
    <columns>Job_Name__c</columns>
    <columns>Schedule_Time__c</columns>
    <columns>Scheduled__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Name__c</field>
        <operation>contains</operation>
        <value>926_16AUG</value>
    </filters>
    <label>Specific Flight</label>
    <language>en_US</language>
</ListView>